--- a/skillcapped.html
+++ b/skillcapped.html
@@ -116,21 +116,21 @@
 
             const playlists = {
                 playlist1: [
-                    { name: "what is macro", url: "https://www.skill-capped.com/lol/browse/course/ypkt1bksy9" },
-                    { name: "How To Make Aiming Easier", url: "https://www.skill-capped.com/valorant/browse/course/wck5mkm206" },
-                    { name: "How To Make Aiming Easier (In Game Examples)", url: "https://www.skill-capped.com/valorant/browse/course/b8y3c9jt4x" },
-                    { name: "Crosshair Placement", url: "https://www.skill-capped.com/valorant/browse/course/7505p8pf7l" },
-                    { name: "Crosshair Placement (In Game Examples)", url: "https://www.skill-capped.com/valorant/browse/course/4t0xfb887h" },
-                    { name: "Activity (Clearing Angles)", url: "https://www.skill-capped.com/valorant/browse/course/qtdkt2ll0w" },
-                    { name: "Gamesense And Awareness", url: "https://www.skill-capped.com/valorant/browse/course/w9bzlh0g1p" },
-                    { name: "Gamesense And Awareness (In Game Examples)", url: "https://www.skill-capped.com/valorant/browse/course/llq9kjhx66" },
-                    { name: "Utility And Positioning", url: "https://www.skill-capped.com/valorant/browse/course/0yc9q78kgf" },
-                    { name: "Survive Longer In Fights", url: "https://www.skill-capped.com/valorant/browse/course/vmt3x40gby" },
-                    { name: "Use Utility To Win Gun Fights", url: "https://www.skill-capped.com/valorant/browse/course/mpsp5vjc51" },
-                    { name: "Use Utility To Win Gun Fights (In Game Examples)", url: "https://www.skill-capped.com/valorant/browse/course/9ps3gk7h7g" },
-                    { name: "How To Get More Multikills", url: "https://www.skill-capped.com/valorant/browse/course/gvg6r7hk2h" },
-                    { name: "Staying One Step Ahead", url: "https://www.skill-capped.com/valorant/browse/course/7p55r88tzb" },
-                    { name: "Activity (How To Get More Multikills)", url: "https://www.skill-capped.com/valorant/browse/course/d2jl5fg3wq" },
+                   { name: "what is macro", url: "https://www.skill-capped.com/lol/browse/course/ypkt1bksy9" },
+                    { name: "Strong side and wick side", url: "https://www.skill-capped.com/lol/browse/course/rz1t6z3z52" },
+                    { name: "The Value of pushinf waves", url: "https://www.skill-capped.com/lol/browse/course/t1ypc1g5pn" },
+                    { name: "4", url: "https://www.skill-capped.com/lol/browse/course/7pwgsc1v8n" },
+                    { name: "5", url: "https://www.skill-capped.com/lol/browse/course/jg7565lv5s" },
+                    { name: "6", url: "https://www.skill-capped.com/lol/browse/course/hmkqgf86bp" },
+                    { name: "7", url: "https://www.skill-capped.com/lol/browse/course/nkj3p4d0cd" },
+                    { name: "8", url: "https://www.skill-capped.com/lol/browse/course/rdcpfr0z5n" },
+                    { name: "9", url: "https://www.skill-capped.com/lol/browse/course/gy4rnbjrny" },
+                    { name: "10", url: "https://www.skill-capped.com/lol/browse/course/r7hh2tpqrp" },
+                    { name: "11", url: "https://www.skill-capped.com/lol/browse/course/vhrmn36b87" },
+                    { name: "12", url: "https://www.skill-capped.com/lol/browse/course/qk0vln10jj" },
+                    { name: "13", url: "https://www.skill-capped.com/lol/browse/course/03x2b2p0zz" },
+                    { name: "14", url: "https://www.skill-capped.com/lol/browse/course/1phkysrwbn" },
+                    { name: "15", url: "https://www.skill-capped.com/lol/browse/course/134hh4k8lz" },
                     { name: "Beginner Aim Routines", url: "https://www.skill-capped.com/valorant/browse/course/pg28glm7nd" },
                     { name: "Activity (Practicing Your Movement)", url: "https://www.skill-capped.com/valorant/browse/course/3kbw5gbpcy" },
                     { name: "Counter Strafing Practice", url: "https://www.skill-capped.com/valorant/browse/course/93fj69d7r6" },
