--- a/deepseeklol.html
+++ b/deepseeklol.html
@@ -86,6 +86,7 @@
             <select id="playlist" onchange="updateVideos()">
                 <option value="">Choose a playlist</option>
                 <option value="macro">Macro Fundamentals</option>
+                <option value="freeze">База фриза волны</option>
             </select>
         </div>
 
@@ -137,6 +138,13 @@
                     { name: "13. Teamfight Setup", url: "https://www.skill-capped.com/lol/browse/course/03x2b2p0zz" },
                     { name: "14. Baron Plays", url: "https://www.skill-capped.com/lol/browse/course/1phkysrwbn" },
                     { name: "15. Closing Games", url: "https://www.skill-capped.com/lol/browse/course/134hh4k8lz" }
+                ]
+            },
+            freeze: {
+                name: "База фриза волны",
+                videos: [
+                    { name: "1. Медленный пуш", url: "https://www.skill-capped.com/lol/browse/course/34w9xhmhdp" },
+                    { name: "2. Быстрый пуш", url: "https://www.skill-capped.com/lol/browse/course/1t4c69y26s" }
                 ]
             }
         };
