--- a/deepseeklol.html
+++ b/deepseeklol.html
@@ -86,7 +86,7 @@
             <select id="playlist" onchange="updateVideos()">
                 <option value="">Choose a playlist</option>
                 <option value="macro">Macro Fundamentals</option>
-                <option value="freeze">База фриза волны</option>
+                <option value="wavecontrol">Master Wave Control in Minutes</option>
             </select>
         </div>
 
@@ -140,11 +140,21 @@
                     { name: "15. Closing Games", url: "https://www.skill-capped.com/lol/browse/course/134hh4k8lz" }
                 ]
             },
-            freeze: {
-                name: "База фриза волны",
+            wavecontrol: {
+                name: "Master Wave Control in Minutes",
                 videos: [
-                    { name: "1. Медленный пуш", url: "https://www.skill-capped.com/lol/browse/course/34w9xhmhdp" },
-                    { name: "2. Быстрый пуш", url: "https://www.skill-capped.com/lol/browse/course/1t4c69y26s" }
+                    { name: "1. Slow Push", url: "https://www.skill-capped.com/lol/browse/course/34w9xhmhdp" },
+                    { name: "2. Freezing", url: "https://www.skill-capped.com/lol/browse/course/1t4c69y26s" },
+                    { name: "3. Fast Push", url: "https://www.skill-capped.com/lol/browse/course/07sdsz32xc" },
+                    { name: "4. Advanced Wave Control", url: "https://www.skill-capped.com/lol/browse/course/ch76gyp97j" },
+                    { name: "5. Wave Timing", url: "https://www.skill-capped.com/lol/browse/course/zf04v8h855" },
+                    { name: "6. Lane Priority Techniques", url: "https://www.skill-capped.com/lol/browse/course/khhr0q9dd6" },
+                    { name: "7. Wave Manipulation", url: "https://www.skill-capped.com/lol/browse/course/d01kv5hjjs" },
+                    { name: "8. Bounce Techniques", url: "https://www.skill-capped.com/lol/browse/course/pzflxjqbp1" },
+                    { name: "9. Wave States", url: "https://www.skill-capped.com/lol/browse/course/sk35cwwv46" },
+                    { name: "10. Advanced Freezing", url: "https://www.skill-capped.com/lol/browse/course/9rjzw6h65m" },
+                    { name: "11. Wave Control in Mid Game", url: "https://www.skill-capped.com/lol/browse/course/016tdl9nrw" },
+                    { name: "12. Closing with Wave Control", url: "https://www.skill-capped.com/lol/browse/course/qndjltg8wp" }
                 ]
             }
         };
