--- a/deepseeklol.html
+++ b/deepseeklol.html
@@ -87,6 +87,7 @@
                 <option value="">Choose a playlist</option>
                 <option value="macro">Macro Fundamentals</option>
                 <option value="wavecontrol">Master Wave Control in Minutes</option>
+                <option value="lux">Master Lux in Minutes</option>
             </select>
         </div>
 
@@ -155,6 +156,22 @@
                     { name: "10. Advanced Freezing", url: "https://www.skill-capped.com/lol/browse/course/9rjzw6h65m" },
                     { name: "11. Wave Control in Mid Game", url: "https://www.skill-capped.com/lol/browse/course/016tdl9nrw" },
                     { name: "12. Closing with Wave Control", url: "https://www.skill-capped.com/lol/browse/course/qndjltg8wp" }
+                ]
+            },
+            lux: {
+                name: "Master Lux in Minutes",
+                videos: [
+                    { name: "1. Lux Introduction", url: "https://www.skill-capped.com/lol/browse/course/p62982qh9n" },
+                    { name: "2. What Role to Play Lux", url: "https://www.skill-capped.com/lol/browse/course/0jblzmgz4s" },
+                    { name: "3. Lux Combos", url: "https://www.skill-capped.com/lol/browse/course/02cd747h9j" },
+                    { name: "4. Lux Positioning", url: "https://www.skill-capped.com/lol/browse/course/p6htqnl749" },
+                    { name: "5. Lux Skill Shots", url: "https://www.skill-capped.com/lol/browse/course/tch70zzp0n" },
+                    { name: "6. Lux Builds", url: "https://www.skill-capped.com/lol/browse/course/psjmr2dq73" },
+                    { name: "7. Lux Matchups", url: "https://www.skill-capped.com/lol/browse/course/9jb1jjbz87" },
+                    { name: "8. Lux Teamfighting", url: "https://www.skill-capped.com/lol/browse/course/72f5thkklk" },
+                    { name: "9. Lux Vision Control", url: "https://www.skill-capped.com/lol/browse/course/8tkf9cszrj" },
+                    { name: "10. Lux Power Spikes", url: "https://www.skill-capped.com/lol/browse/course/mtp0ylyh3d" },
+                    { name: "11. Advanced Lux Techniques", url: "https://www.skill-capped.com/lol/browse/course/27h2g30fk1" }
                 ]
             }
         };
