--- a/deepseeklol.html
+++ b/deepseeklol.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>LoL Macro Player</title>
     <style>
+        /* Все стили остаются без изменений */
         body {
             font-family: Arial, sans-serif;
             max-width: 1200px;
@@ -88,9 +89,11 @@
                 <option value="macro">Macro Fundamentals</option>
                 <option value="wavecontrol">Master Wave Control in Minutes</option>
                 <option value="lux">Master Lux in Minutes</option>
+                <option value="irontosilver">Iron to Silver</option>
             </select>
         </div>
 
+        <!-- Остальная часть HTML остается без изменений -->
         <div>
             <label for="url">Select Video:</label>
             <select id="url" style="width: 100%;">
@@ -124,6 +127,7 @@
             macro: {
                 name: "Macro Fundamentals",
                 videos: [
+                    /* Существующие видео остаются без изменений */
                     { name: "1. What is Macro", url: "https://www.skill-capped.com/lol/browse/course/ypkt1bksy9" },
                     { name: "2. Strong side and Weak side", url: "https://www.skill-capped.com/lol/browse/course/rz1t6z3z52" },
                     { name: "3. The Value of pushing waves", url: "https://www.skill-capped.com/lol/browse/course/t1ypc1g5pn" },
@@ -144,6 +148,7 @@
             wavecontrol: {
                 name: "Master Wave Control in Minutes",
                 videos: [
+                    /* Существующие видео остаются без изменений */
                     { name: "1. Slow Push", url: "https://www.skill-capped.com/lol/browse/course/34w9xhmhdp" },
                     { name: "2. Freezing", url: "https://www.skill-capped.com/lol/browse/course/1t4c69y26s" },
                     { name: "3. Fast Push", url: "https://www.skill-capped.com/lol/browse/course/07sdsz32xc" },
@@ -161,6 +166,7 @@
             lux: {
                 name: "Master Lux in Minutes",
                 videos: [
+                    /* Существующие видео остаются без изменений */
                     { name: "1. Lux Introduction", url: "https://www.skill-capped.com/lol/browse/course/p62982qh9n" },
                     { name: "2. What Role to Play Lux", url: "https://www.skill-capped.com/lol/browse/course/0jblzmgz4s" },
                     { name: "3. Lux Combos", url: "https://www.skill-capped.com/lol/browse/course/02cd747h9j" },
@@ -173,9 +179,23 @@
                     { name: "10. Lux Power Spikes", url: "https://www.skill-capped.com/lol/browse/course/mtp0ylyh3d" },
                     { name: "11. Advanced Lux Techniques", url: "https://www.skill-capped.com/lol/browse/course/27h2g30fk1" }
                 ]
+            },
+            irontosilver: {
+                name: "Iron to Silver",
+                videos: [
+                    { name: "1. Bronze to Diamond Course Introduction", url: "https://www.skill-capped.com/lol/browse/course/7c05gxjdt7" },
+                    { name: "2. Bronze to Diamond Episode 1", url: "https://www.skill-capped.com/lol/browse/course/8krm8cc13t" },
+                    { name: "3. Introduction ADC Basics", url: "https://www.skill-capped.com/lol/browse/course/r5j0v9dj38" },
+                    { name: "4. Basic Mechanics", url: "https://www.skill-capped.com/lol/browse/course/rfvkqf8g1z" },
+                    { name: "5. Map Awareness", url: "https://www.skill-capped.com/lol/browse/course/4wzrjcf6nn" },
+                    { name: "6. Objective Control Basics", url: "https://www.skill-capped.com/lol/browse/course/80kt8ps0k3" },
+                    { name: "7. Simple Wave Management", url: "https://www.skill-capped.com/lol/browse/course/8tfwzdsvk6" },
+                    { name: "8. Climbing Fundamentals", url: "https://www.skill-capped.com/lol/browse/course/qj8l3hld93" }
+                ]
             }
         };
 
+        // Все остальные функции остаются без изменений
         function updateVideos() {
             const playlistSelect = document.getElementById('playlist');
             const videoSelect = document.getElementById('url');
@@ -206,7 +226,6 @@
 
             statusLabel.textContent = "Searching for video segments...";
 
-            // First find the last segment
             for (let i = 1; i <= 1000; i += 50) {
                 const segmentUrl = `https://d13z5uuzt1wkbz.cloudfront.net/${videoId}/HIDDEN4500-${String(i).padStart(5, "0")}.ts`;
                 try {
@@ -221,7 +240,6 @@
                 }
             }
 
-            // Then find exact segments
             for (let i = Math.max(1, lastSegment - 50); i <= lastSegment + 50; i++) {
                 const segmentUrl = `https://d13z5uuzt1wkbz.cloudfront.net/${videoId}/HIDDEN4500-${String(i).padStart(5, "0")}.ts`;
                 try {
